style.css
/** Basic styles **/
/* Box sizing */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margins (optional) */
* {
  margin: 0;
}

/* Fix line height and font rendering */
body {
  font-size: 1.125rem;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/* Fix media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: auto;
  font-style: italic;
}

/* Fix input styles */
input,
button,
textarea,
select {
  font: inherit;
}

/* Fix text overflow */
p {
  overflow-wrap: break-word;
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  text-wrap: balance;
}

/* Fix link colors */
:where(a) {
  color: #07a;
  text-underline-offset: 0.2em;
}
:where(a):visited {
  color: #941352;
}

/** Variables **/
:root {
  /* Colors */
  --text-normal: #454545;
  --text-muted: #767676;
  --button-gradient: linear-gradient(70deg, #e0002b, #d57300), #d57300;

  /* Fonts */
  --font-normal: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif;
  --font-interactive: system-ui, sans-serif;

  /* Font sizes */
  --font-scale: 1.25;
  --p: 1rem;
  --h5-size: calc(var(--p) * var(--font-scale));
  --h4-size: calc(var(--h5-size) * var(--font-scale));
  --h3-size: calc(var(--h4-size) * var(--font-scale));
  --h2-size: calc(var(--h3-size) * var(--font-scale));
  --h1-size: calc(var(--h2-size) * var(--font-scale));

  /* Sizes */
  --main-max-width: 1060px;
  --main-margin: 1rem;

  /* Animation speed */
  --speed-fast: 100ms;
  --speed-medium: 200ms;
}

body {
  --bg-overlay: #fffd;
  --bg-lines: #633300;
  --bg-size: 100px;
  --grid-gradient: transparent 0 48px, var(--bg-lines) 48px 50px,
    transparent 50px 100px;
  color: var(--text-normal);
  background-image: linear-gradient(var(--bg-overlay), var(--bg-overlay)),
    url(./post-this-cat-bg.png), repeating-linear-gradient(var(--grid-gradient)),
    repeating-linear-gradient(0.25turn, var(--grid-gradient));
  background-size: var(--bg-size);
  background-position:
    0 0,
    left -50px top -50px,
    left top;
}

@media (prefers-reduced-motion: no-preference) {
  body {
    animation: body-fade 25s linear infinite;
  }
}

@keyframes body-fade {
  from {
    background-position:
      0 0,
      left -50px top -50px,
      left top,
      left top;
  }
  to {
    background-position:
      0 0,
      calc(var(--bg-size) * 3 - 50px) calc(var(--bg-size) - 50px),
      calc(var(--bg-size) * -4) calc(var(--bg-size) * -3),
      calc(var(--bg-size) * -4) calc(var(--bg-size) * -3);
  }
}

main {
  width: min(var(--main-max-width), 100%);
  margin-inline: auto;
  padding: 1rem clamp(1rem, 2.5vw, 2rem) 3rem;
  font-family: var(--font-normal);
  background-color: white;
  box-shadow: 0 0 18px -4px #0004;
}

main > * + * {
  margin-top: 1em;
}

/* Element styles */
h1 {
  text-align: center;
  font-size: var(--h1-size);
}
h2 {
  font-size: var(--h2-size);
}
h3 {
  font-size: var(--h3-size);
}
h4 {
  font-size: var(--h4-size);
}
h5 {
  font-size: var(--h5-size);
}

.print-link img {
  height: 30em;
}

.main-columns {
}

/* Hero section */
.hero {
  display: grid;
  grid-template-areas:
    "a b"
    "c b";
  gap: 2rem;
  border: 2px solid var(--text-muted);
  border-radius: 1.5rem;
  padding: 1rem 1.5rem;
  padding-left: 1.75rem;
}

/* Left side */
.hero-text {
  grid-area: a;
}
.hero-text > * + * {
  margin-top: 1em;
}

/* List items */
.hero-list {
  font-size: 2rem;
  list-style-type: "\1F431";
}
.hero-list > li {
  padding-left: 0.75ch;
}
.hero-list > li:nth-child(2) {
  list-style-type: "\1F639";
}
.hero-list > li:last-child {
  list-style-type: "\1F480";
}

/* Button */
.button-container {
  grid-area: c;
  display: flex;
}
.print-link {
  --transform-offset: 4px;
  display: inline-block;
  height: min-content;
  padding: 0.75rem 2rem;
  margin-inline: auto;
  border-radius: 1rem;
  border: unset;

  background: var(--button-gradient);
  box-shadow: var(--transform-offset) var(--transform-offset) 0
    var(--text-normal);
  translate: calc(-1 * var(--transform-offset))
    calc(-1 * var(--transform-offset));

  font-size: clamp(2.5rem, 3.5vw, 3rem);
  font-weight: bold;
  font-family: var(--font-interactive);
  color: white;
  text-decoration: none;

  transition:
    box-shadow var(--speed-fast) ease,
    translate var(--speed-fast) ease;

  &:hover {
    --transform-offset: 6px;
  }
  &:active {
    --transform-offset: 3px;
  }
}

/* Right side */
.hero-image-wrapper {
  max-height: 75vh;
  grid-area: b;
}
.hero-image {
  margin-inline: auto;
  box-shadow:
    2px 4px 8px 0 #0003,
    4px 8px 16px 0 #0002;
}

@media (width <= 600px) {
  .hero {
    grid-template-areas:
      "a"
      "b"
      "c";
  }
  .hero-image-wrapper {
    max-height: 40vh;
  }
}

.fancy-hr {
  --height: 120px;

  overflow: visible;
  display: grid;
  place-items: center;
  height: 0;
  margin: calc(var(--height) / 2) 0px;
  border-style: solid;
}

.fancy-hr::after {
  content: url("./cat.svg");
  transform-origin: center;
  display: block;
  background-color: white;
  transform: translateY(-50%);
  outline: 10px solid white;
}

